[gd_scene load_steps=6 format=3 uid="uid://bb2pes6wlheoq"]

[ext_resource type="Script" uid="uid://bqi1oh1kkjui7" path="res://scripts/player1.gd" id="1_lj8jo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7wee"]
size = Vector2(19.5, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lu16"]
size = Vector2(26.5, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fu5bs"]
size = Vector2(26.5, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irimc"]
size = Vector2(26.5, 20)

[node name="paddle" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_lj8jo")
metadata/dir_mod = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -9.0
offset_top = -57.0
offset_right = 10.0
offset_bottom = 57.0
metadata/_edit_use_anchors_ = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 0)
shape = SubResource("RectangleShape2D_y7wee")
metadata/dir_mod = Vector2(0.5, 0.5)

[node name="top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
position = Vector2(0, -41)
shape = SubResource("RectangleShape2D_1lu16")

[node name="bottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom"]
position = Vector2(0, 41)
shape = SubResource("RectangleShape2D_fu5bs")

[node name="middle" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="middle"]
shape = SubResource("RectangleShape2D_irimc")

[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="middle" to="." method="_on_middle_body_entered"]
